--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@ h3 {
     <font color="#FFCCCC">T</font>
     <font color="#00C1D4">Y</font>
 </h1>
-
+<p>Hope all clear to you</p>
 </body>
 </html>
